[tool.poetry]
name = "DabRPG"
version = "0.1.0"
description = "A RPG"
authors = ["Dabbin Gaming and awdev"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
replitdb = "^0.0.13"
replit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
